# sigil-generator

./: README.md  initialize.sh  sigil-generator.cabal
